<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorPrimaryDark"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_music_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        tools:text="@string/number_music_order" />

    <TextView
        android:id="@+id/tv_music_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/music_name"
        android:layout_marginLeft="10dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_toRightOf="@id/tv_music_order"/>

    <TextView
        android:id="@+id/tv_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/album_name"
        android:layout_marginLeft="14dp"
        android:maxLines="1"
        android:textSize="10sp"
        android:textColor="@color/grey"
        android:layout_below="@id/tv_music_name"
        android:layout_toRightOf="@id/tv_music_order"/>

</RelativeLayout>