<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.DetailArtistActivity">

    <ImageView
        android:id="@+id/img_profile_artist"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/tv_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/img_profile_artist"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:text="@string/artist_name" />
    
    <TextView
        android:id="@+id/tv_fan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/img_profile_artist"
        android:layout_below="@id/tv_artist_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="10sp"
        tools:text="@string/number_fan"/>

    <TextView
        android:id="@+id/tv_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fan"
        android:layout_toRightOf="@id/img_profile_artist"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="10sp"
        tools:text="@string/number_album"/>

    <TextView
        android:id="@+id/tv_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_music"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_below="@id/img_profile_artist"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_musics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_music"
        android:layout_marginLeft="10dp"
        android:layout_above="@id/playerView"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/speaker"
        android:layout_above="@id/playerView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        app:fabSize="normal"/>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        app:fastforward_increment="1000"
        app:rewind_increment="1000"/>

</RelativeLayout>